--- a/plugins/MediaPlayer/MediaPlayer.rc
+++ b/plugins/MediaPlayer/MediaPlayer.rc
@@ -31,12 +31,12 @@ VS_VERSION_INFO VERSIONINFO
  PRODUCTVERSION 2,5,2,0
  FILEFLAGSMASK 0x3fL
 #ifdef _DEBUG
- FILEFLAGS 0x1L
+ FILEFLAGS 0x21L
 #else
- FILEFLAGS 0x0L
+ FILEFLAGS 0x20L
 #endif
  FILEOS 0x4L
- FILETYPE 0x2L
+ FILETYPE 0x1L
  FILESUBTYPE 0x0L
 BEGIN
     BLOCK "StringFileInfo"
@@ -49,9 +49,10 @@ BEGIN
             VALUE "FileVersion", "2, 0, 0, 0"
             VALUE "InternalName", "MediaPlayer"
             VALUE "LegalCopyright", "Copyright © Shareaza Development Team, 2009-2010. All rights reserved."
-            VALUE "OriginalFilename", "MediaPlayer.dll"
+            VALUE "OriginalFilename", "MediaPlayer.exe"
             VALUE "ProductName", "Shareaza"
             VALUE "ProductVersion", "2, 5, 2, 0"
+            VALUE "SpecialBuild", "plugin"
         END
     END
     BLOCK "VarFileInfo"
