--- a/plugins/MediaLibraryBuilder/MediaLibraryBuilder_9.vcproj
+++ b/plugins/MediaLibraryBuilder/MediaLibraryBuilder_9.vcproj
@@ -107,8 +107,8 @@
 			/>
 			<Tool
 				Name="VCPostBuildEventTool"
-				Description="Performing registration"
-				CommandLine="&quot;$(TargetPath)&quot; /RegServer"
+				Description="Per User Registration..."
+				CommandLine="&quot;$(TargetPath)&quot; /RegServerPerUser"
 			/>
 		</Configuration>
 		<Configuration
@@ -198,8 +198,8 @@
 			/>
 			<Tool
 				Name="VCPostBuildEventTool"
-				Description="Performing registration"
-				CommandLine="&quot;$(TargetPath)&quot; /RegServer"
+				Description="Per User Registration..."
+				CommandLine="&quot;$(TargetPath)&quot; /RegServerPerUser"
 			/>
 		</Configuration>
 		<Configuration
@@ -296,8 +296,8 @@
 			/>
 			<Tool
 				Name="VCPostBuildEventTool"
-				Description="Performing registration"
-				CommandLine="&quot;$(TargetPath)&quot; /RegServer"
+				Description="Per User Registration..."
+				CommandLine="&quot;$(TargetPath)&quot; /RegServerPerUser"
 			/>
 		</Configuration>
 		<Configuration
@@ -394,8 +394,8 @@
 			/>
 			<Tool
 				Name="VCPostBuildEventTool"
-				Description="Performing registration"
-				CommandLine="&quot;$(TargetPath)&quot; /RegServer"
+				Description="Per User Registration..."
+				CommandLine="&quot;$(TargetPath)&quot; /RegServerPerUser"
 			/>
 		</Configuration>
 	</Configurations>
