--- a/plugins/WindowsThumbnail/WindowsThumbnail.vcproj
+++ b/plugins/WindowsThumbnail/WindowsThumbnail.vcproj
@@ -106,8 +106,8 @@
 			/>
 			<Tool
 				Name="VCPostBuildEventTool"
-				Description="Performing registration"
-				CommandLine="&quot;$(TargetPath)&quot; /RegServer"
+				Description="Per User Registration..."
+				CommandLine="&quot;$(TargetPath)&quot; /RegServerPerUser"
 			/>
 		</Configuration>
 		<Configuration
@@ -197,8 +197,8 @@
 			/>
 			<Tool
 				Name="VCPostBuildEventTool"
-				Description="Performing registration"
-				CommandLine="&quot;$(TargetPath)&quot; /RegServer"
+				Description="Per User Registration..."
+				CommandLine="&quot;$(TargetPath)&quot; /RegServerPerUser"
 			/>
 		</Configuration>
 		<Configuration
@@ -295,8 +295,8 @@
 			/>
 			<Tool
 				Name="VCPostBuildEventTool"
-				Description="Performing registration"
-				CommandLine="&quot;$(TargetPath)&quot; /RegServer"
+				Description="Per User Registration..."
+				CommandLine="&quot;$(TargetPath)&quot; /RegServerPerUser"
 			/>
 		</Configuration>
 		<Configuration
@@ -393,8 +393,8 @@
 			/>
 			<Tool
 				Name="VCPostBuildEventTool"
-				Description="Performing registration"
-				CommandLine="&quot;$(TargetPath)&quot; /RegServer"
+				Description="Per User Registration..."
+				CommandLine="&quot;$(TargetPath)&quot; /RegServerPerUser"
 			/>
 		</Configuration>
 	</Configurations>
